src/test/ui/moves/move-out-of-array-1.stderr
error[E0508]: cannot move out of type `[D; 4]`, a non-copy array
  --> $DIR/move-out-of-array-1.rs:17:5
   |
LL |     a[i]
   |     ^^^^
   |     |
   |     cannot move out of here
   |     move occurs because `a[_]` has type `D`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0508`.
